Done relations between models

--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -11,7 +11,10 @@
         </menuitem>
         <!-- Settings -->
         <menuitem id="estate_settings_menu" name="Settings" sequence="10">
+            <!-- Type -->
             <menuitem id="estate_property_type_menu_action" action="estate_property_type_action" sequence="5"/>
+            <!-- Tag -->
+            <menuitem id="estate_property_tag_menu_action" action="estate_property_tag_action" sequence="5"/>
         </menuitem>
     </menuitem>
 </odoo>
