--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -11,10 +11,13 @@
                         <h1>
                             <field name="name"/>
                         </h1>
+                        <field name="tag_ids" widget="many2many_tags" />
+                        <br />
                         <br />
                     </div>
                     <group>
                         <group>
+                            <field name="property_type_id" />
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
@@ -38,6 +41,17 @@
                                 </group>
                             </group>
                         </page>
+                        <page string="Offers">
+                            <field name="offer_ids"/>
+                        </page>
+                        <page string="Other Info">
+                            <group>
+                                <group>
+                                    <field name="user_id"/>
+                                    <field name="buyer_id"/>
+                                </group>
+                            </group>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
@@ -50,14 +64,18 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <tree string="Properties">
-                <field name="name"/>
-                <field name="postcode"/>
-                <field name="bedrooms"/>
-                <field name="living_area"/>
-                <field name="expected_price"/>
-                <field name="selling_price"/>
-                <field name="date_availability"/>
+                <field name="name" />
+                <field name="tag_ids" widget="many2many_tags" />
+                <field name="property_type_id" />
+                <field name="postcode" />
+                <field name="bedrooms" />
+                <field name="living_area" />
+                <field name="expected_price" />
+                <field name="selling_price" />
+                <field name="date_availability" />
                 <field name="state" />
+                <field name="user_id"/>
+                <field name="buyer_id"/>
             </tree>
         </field>
     </record>
@@ -69,6 +87,7 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name"/>
+                <field name="property_type_id" />
                 <field name="postcode"/>
                 <field name="expected_price"/>
                 <field name="bedrooms"/>
