--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -6,23 +6,31 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button name="action_sold" type="object" string="Sold" states="new,offer_received"/>
+                    <button name="action_sold" type="object" string="Sold" states="offer_accepted" class="oe_highlight"/>
+                    <button name="action_cancel" type="object" string="Cancel" states="new,offer_received,offer_accepted"/>
+                    <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold"/>
+                </header>
                 <sheet>
                     <div>
                         <h1>
-                            <field name="name"/>
+                            <field name="name" placeholder="Title" />
                         </h1>
-                        <field name="tag_ids" widget="many2many_tags" />
+                        <field name="tag_ids" widget="many2many_tags" placeholder="Tags" style="padding-left: 4px;" />
                         <br />
                         <br />
                     </div>
                     <group>
                         <group>
+                            <!-- Many2one -->
                             <field name="property_type_id" />
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
                         <group>
                             <field name="expected_price"/>
+                            <field name="best_price" />
                             <field name="selling_price"/>
                         </group>
                     </group>
@@ -30,14 +38,15 @@
                         <page string="Description">
                             <group>
                                 <group>
-                                    <field name="description"/>
-                                    <field name="bedrooms"/>
-                                    <field name="living_area"/>
-                                    <field name="facades"/>
-                                    <field name="garage"/>
-                                    <field name="garden"/>
+                                    <field name="description" />
+                                    <field name="bedrooms" />
+                                    <field name="living_area" />
+                                    <field name="facades" />
+                                    <field name="garage" />
+                                    <field name="garden" />
                                     <field name="garden_area"/>
-                                    <field name="garden_orientation"/>
+                                    <field name="garden_orientation" />
+                                    <field name="total_area" />
                                 </group>
                             </group>
                         </page>
