--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -17,14 +17,14 @@
                         <h1>
                             <field name="name" placeholder="Title" />
                         </h1>
-                        <field name="tag_ids" widget="many2many_tags" placeholder="Tags" style="padding-left: 4px;" />
+                        <field name="tag_ids" widget="many2many_tags" placeholder="Tags" style="padding-left: 4px;" options="{'color_field': 'color'}" />
                         <br />
                         <br />
                     </div>
                     <group>
                         <group>
                             <!-- Many2one -->
-                            <field name="property_type_id" />
+                            <field name="property_type_id" options="{'no_create': True, 'no_edit': True}" />
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
@@ -44,14 +44,14 @@
                                     <field name="facades" />
                                     <field name="garage" />
                                     <field name="garden" />
-                                    <field name="garden_area"/>
-                                    <field name="garden_orientation" />
+                                    <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}" />
+                                    <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}" />
                                     <field name="total_area" />
                                 </group>
                             </group>
                         </page>
                         <page string="Offers">
-                            <field name="offer_ids"/>
+                            <field name="offer_ids" attrs="{'readonly': [('state', 'in', ('offer_accepted', 'sold', 'canceled'))]}"/>
                         </page>
                         <page string="Other Info">
                             <group>
@@ -72,16 +72,16 @@
         <field name="name">estate.property.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Properties">
+            <tree string="Properties" decoration-success="state in ('offer_received', 'offer_accepted')" decoration-muted="state == 'sold'" decoration-bf="state == 'offer_accepted'">
                 <field name="name" />
-                <field name="tag_ids" widget="many2many_tags" />
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                 <field name="property_type_id" />
                 <field name="postcode" />
                 <field name="bedrooms" />
                 <field name="living_area" />
                 <field name="expected_price" />
                 <field name="selling_price" />
-                <field name="date_availability" />
+                 <field name="date_availability" optional="hide"/>
                 <field name="state" />
                 <field name="user_id"/>
                 <field name="buyer_id"/>
@@ -104,7 +104,7 @@
                 <field name="facades"/>
                 <field name="garage"/>
                 <field name="garden"/>
-                <filter string="Available" name="available" domain="[('state', 'in', ('new', 'offer_received'))]"/>
+                <filter string="Available" name="available" domain="[('state', 'in', ('new', 'offer_received'))]" />
                 <group expand="1" string="Group By">
                     <filter string="Postcode" name='postcode' context="{'group_by':'postcode'}"/>
                 </group>
@@ -120,5 +120,7 @@
         <field name="res_model">estate.property</field>
         <!-- View Mode -->
         <field name="view_mode">tree,form</field>
+        <!-- Default Search -->
+        <field name="context">{'search_default_available': 1}</field>
     </record>
 </odoo>
